--- a/MaxsportProject/Views/Home/Index.cshtml
+++ b/MaxsportProject/Views/Home/Index.cshtml
@@ -99,9 +99,9 @@
         <div class="tab-class text-center">
             <div class="row g-4">
                 <div class="col-lg-4 text-start">
-
+              
                     <img class="img02" src="~/Assets/images/rikilogo.jpg" />
-                    <h3>Áo Polo RIKI</h3>
+                       <h3>Áo Polo RIKI</h3>
                 </div>
                 <div class="col-lg-8 text-end">
                     <ul class="nav nav-pills d-inline-flex text-center mb-5">
@@ -458,7 +458,7 @@
             <div class="col-md-6 col-lg-4">
                 <a href="#">
                     <div class="service-item bg-secondary rounded border border-secondary">
-                        <img src="~/Assets/images/featur-1.jpg" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/Assets/images/sp40-v.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="px-4 rounded-bottom">
                             <div class="service-content bg-primary text-center p-4 rounded">
                                 <h5 class="text-white">Fresh Apples</h5>
@@ -471,7 +471,7 @@
             <div class="col-md-6 col-lg-4">
                 <a href="#">
                     <div class="service-item bg-dark rounded border border-dark">
-                        <img src="~/Assets/images/featur-2.jpg" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/Assets/images/sp41-v.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="px-4 rounded-bottom">
                             <div class="service-content bg-light text-center p-4 rounded">
                                 <h5 class="text-primary">Tasty Fruits</h5>
@@ -484,7 +484,7 @@
             <div class="col-md-6 col-lg-4">
                 <a href="#">
                     <div class="service-item bg-primary rounded border border-primary">
-                        <img src="~/Assets/images/featur-3.jpg" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/Assets/images/sp42-v.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="px-4 rounded-bottom">
                             <div class="service-content bg-secondary text-center p-4 rounded">
                                 <h5 class="text-white">Exotic Vegitable</h5>
@@ -512,7 +512,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="position-relative">
-                    <img src="~/Assets/images/baner-1.png" class="img-fluid w-100 rounded" alt="">
+                    <img src="~/Assets/images/sp03.jpg" class="img-fluid w-100 rounded" alt="">
                     <div class="d-flex align-items-center justify-content-center bg-white rounded-circle position-absolute" style="width: 140px; height: 140px; top: 0; left: 0;">
                         <h1 style="font-size: 100px;">1</h1>
                         <div class="d-flex flex-column">
@@ -538,7 +538,7 @@
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
                         <div class="col-6">
-                            <img src="~/Assets/images/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <img src="~/Assets/images/sp42-v.jpg" class="img-fluid rounded-circle w-100" alt="">
                         </div>
                         <div class="col-6">
                             <a href="#" class="h5">Organic Tomato</a>
@@ -559,7 +559,7 @@
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
                         <div class="col-6">
-                            <img src="~/Assets/images/best-product-2.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <img src="~/Assets/images/sp43-v.jpg" class="img-fluid rounded-circle w-100" alt="">
                         </div>
                         <div class="col-6">
                             <a href="#" class="h5">Organic Tomato</a>
@@ -580,7 +580,7 @@
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
                         <div class="col-6">
-                            <img src="~/Assets/images/best-product-3.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <img src="~/Assets/images/sp38-v.jpg" class="img-fluid rounded-circle w-100" alt="">
                         </div>
                         <div class="col-6">
                             <a href="#" class="h5">Organic Tomato</a>
@@ -601,7 +601,7 @@
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
                         <div class="col-6">
-                            <img src="~/Assets/images/best-product-4.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <img src="~/Assets/images/sp45-v.jpg" class="img-fluid rounded-circle w-100" alt="">
                         </div>
                         <div class="col-6">
                             <a href="#" class="h5">Organic Tomato</a>
@@ -622,7 +622,7 @@
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
                         <div class="col-6">
-                            <img src="~/Assets/images/best-product-5.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <img src="~/Assets/images/sp39-v.jpg" class="img-fluid rounded-circle w-100" alt="">
                         </div>
                         <div class="col-6">
                             <a href="#" class="h5">Organic Tomato</a>
@@ -643,7 +643,7 @@
                 <div class="p-4 rounded bg-light">
                     <div class="row align-items-center">
                         <div class="col-6">
-                            <img src="~/Assets/images/best-product-6.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <img src="~/Assets/images/sp37-v.jpg" class="img-fluid rounded-circle w-100" alt="">
                         </div>
                         <div class="col-6">
                             <a href="#" class="h5">Organic Tomato</a>
@@ -662,7 +662,7 @@
             </div>
             <div class="col-md-6 col-lg-6 col-xl-3">
                 <div class="text-center">
-                    <img src="~/Assets/images/fruite-item-1.jpg" class="img-fluid rounded" alt="">
+                    <img src="~/Assets/images/sp36-v.jpg" class="img-fluid rounded" alt="">
                     <div class="py-4">
                         <a href="#" class="h5">Organic Tomato</a>
                         <div class="d-flex my-3 justify-content-center">
@@ -679,7 +679,7 @@
             </div>
             <div class="col-md-6 col-lg-6 col-xl-3">
                 <div class="text-center">
-                    <img src="~/Assets/images/fruite-item-2.jpg" class="img-fluid rounded" alt="">
+                    <img src="~/Assets/images/sp35-v.jpg" class="img-fluid rounded" alt="">
                     <div class="py-4">
                         <a href="#" class="h5">Organic Tomato</a>
                         <div class="d-flex my-3 justify-content-center">
@@ -696,7 +696,7 @@
             </div>
             <div class="col-md-6 col-lg-6 col-xl-3">
                 <div class="text-center">
-                    <img src="~/Assets/images/fruite-item-3.jpg" class="img-fluid rounded" alt="">
+                    <img src="~/Assets/images/sp34-v.jpg" class="img-fluid rounded" alt="">
                     <div class="py-4">
                         <a href="#" class="h5">Organic Tomato</a>
                         <div class="d-flex my-3 justify-content-center">
@@ -713,7 +713,7 @@
             </div>
             <div class="col-md-6 col-lg-6 col-xl-3">
                 <div class="text-center">
-                    <img src="~/Assets/images/fruite-item-4.jpg" class="img-fluid rounded" alt="">
+                    <img src="~/Assets/images/sp32-v.jpg" class="img-fluid rounded" alt="">
                     <div class="py-2">
                         <a href="#" class="h5">Organic Tomato</a>
                         <div class="d-flex my-3 justify-content-center">
@@ -769,4 +769,4 @@
         </div>
     </div>
 </div>
-<!-- Fact Start -->
+<!-- Fact Startt -->
