--- a/MaxsportProject/Views/Shared/_Layout.cshtml
+++ b/MaxsportProject/Views/Shared/_Layout.cshtml
@@ -64,9 +64,9 @@
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="shop.html" class="nav-item nav-link">Shop</a>
-                        <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
+                        <a href="@Url.Action("index", "Home")" class="nav-item nav-link active">Home</a>
+                        <a href="@Url.Action("index", "Shop")" class="nav-item nav-link">Shop</a>
+                        <a href="@Url.Action("index", "ShopDetail")" class="nav-item nav-link">Shop Detail</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
