--- a/MaxsportProject/Views/Shared/_Layout.cshtml
+++ b/MaxsportProject/Views/Shared/_Layout.cshtml
@@ -44,13 +44,13 @@
         <div class="container topbar bg-primary d-none d-lg-block">
             <div class="d-flex justify-content-between">
                 <div class="top-info ps-2">
-                    <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">123 Street, New York</a></small>
-                    <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">Email@Example.com</a></small>
+                    <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">123 Quận 12, TP.HCM</a></small>
+                    <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">dfsdafsd@gmail.com</a></small>
                 </div>
                 <div class="top-link pe-2">
-                    <a href="#" class="text-white"><small class="text-white mx-2">Privacy Policy</small>/</a>
-                    <a href="#" class="text-white"><small class="text-white mx-2">Terms of Use</small>/</a>
-                    <a href="#" class="text-white"><small class="text-white ms-2">Sales and Refunds</small></a>
+                    <a href="#" class="text-white"><small class="text-white mx-2">Chính sách bảo mật</small>/</a>
+                    <a href="#" class="text-white"><small class="text-white mx-2">Điều khoản sử dụng</small>/</a>
+                    <a href="#" class="text-white"><small class="text-white ms-2">Chính sách hoàn tiền</small></a>
                 </div>
             </div>
         </div>
@@ -64,19 +64,19 @@
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
-                        <a href="@Url.Action("index", "Home")" class="nav-item nav-link active">Home</a>
+                        <a href="@Url.Action("index", "Home")" class="nav-item nav-link active">Trang chủ</a>
                         <a href="@Url.Action("index", "Shop")" class="nav-item nav-link">Shop</a>
-                        <a href="@Url.Action("index", "ShopDetail")" class="nav-item nav-link">Shop Detail</a>
+                        <a href="@Url.Action("index", "ShopDetail")" class="nav-item nav-link">Chi tiết</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Trang</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a href="cart.html" class="dropdown-item">Cart</a>
-                                <a href="chackout.html" class="dropdown-item">Chackout</a>
+                                <a href="cart.html" class="dropdown-item">Giỏ hàng</a>
+                                <a href="chackout.html" class="dropdown-item">Kiểm tra</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Hợp đồng</a>
                     </div>
                     <div class="d-flex m-3 me-0">
                         <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
@@ -152,33 +152,33 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Shop Info</h4>
-                        <a class="btn-link" href="">About Us</a>
-                        <a class="btn-link" href="">Contact Us</a>
-                        <a class="btn-link" href="">Privacy Policy</a>
-                        <a class="btn-link" href="">Terms & Condition</a>
-                        <a class="btn-link" href="">Return Policy</a>
-                        <a class="btn-link" href="">FAQs & Help</a>
+                        <h4 class="text-light mb-3">Thông tin cửa hàng</h4>
+                        <a class="btn-link" href="">Về chúng tôi</a>
+                        <a class="btn-link" href="">Liên hệ</a>
+                        <a class="btn-link" href="">Chính sách bảo mật</a>
+                        <a class="btn-link" href="">Điều khoản</a>
+                        <a class="btn-link" href="">Chính sách hoàn trả</a>
+                        <a class="btn-link" href="">Câu hỏi và giúp đỡ</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Account</h4>
-                        <a class="btn-link" href="">My Account</a>
-                        <a class="btn-link" href="">Shop details</a>
-                        <a class="btn-link" href="">Shopping Cart</a>
-                        <a class="btn-link" href="">Wishlist</a>
-                        <a class="btn-link" href="">Order History</a>
-                        <a class="btn-link" href="">International Orders</a>
+                        <h4 class="text-light mb-3">Tài khoản</h4>
+                        <a class="btn-link" href="">Tài khoản của tôi</a>
+                        <a class="btn-link" href="">Chi tiết shop</a>
+                        <a class="btn-link" href="">Giỏ hàng</a>
+                        <a class="btn-link" href="">Danh sách</a>
+                        <a class="btn-link" href="">Lịch sử giao dịch</a>
+                        <a class="btn-link" href="">Đơn hàng quốc tế</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
-                        <h4 class="text-light mb-3">Contact</h4>
-                        <p>Address: 1429 Netus Rd, NY 48247</p>
-                        <p>Email: Example@gmail.com</p>
-                        <p>Phone: +0123 4567 8910</p>
-                        <p>Payment Accepted</p>
+                        <h4 class="text-light mb-3">Hợp đồng</h4>
+                        <p>Địa chỉ: 12 Dictris, HCM.city</p>
+                        <p>Email: @@@@gmail.com</p>
+                        <p>Liên hệ : 0101010101</p>
+                        <p>Hình thức thanh toán</p>
                         <img src="~/imge/payment.png" class="img-fluid" alt="">
                     </div>
                 </div>
@@ -191,13 +191,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Tên trang web</a>, Tất cả các quyền.</span>
                 </div>
                 <div class="col-md-6 my-auto text-center text-md-end text-white">
                     <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                    Designed By <a class="border-bottom" href="https://htmlcodex.com">...</a>
                 </div>
             </div>
         </div>
