--- a/MaxsportProject/Views/Shared/_Layout.cshtml
+++ b/MaxsportProject/Views/Shared/_Layout.cshtml
@@ -33,6 +33,19 @@
         .img01{
             max-height:70px;
         }
+        .color01 {
+            color: #dc3545
+        }
+
+        .navbar .navbar-nav .nav-link.active {
+            color: #dc3545
+        }
+        a {
+            color: #dc3545
+        }
+        .text-primary {
+            color: #dc3545
+        }
     </style>
     <!-- Spinner Start -->
     <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
@@ -41,10 +54,10 @@
     <!-- Spinner End -->
     <!-- Navbar start -->
     <div class="container-fluid fixed-top">
-        <div class="container topbar bg-primary d-none d-lg-block">
+        <div class="container topbar bg-danger d-none d-lg-block">
             <div class="d-flex justify-content-between">
                 <div class="top-info ps-2">
-                    <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">123 Street, New York</a></small>
+                    <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">Hồ Chí Minh</a></small>
                     <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">Email@Example.com</a></small>
                 </div>
                 <div class="top-link pe-2">
@@ -56,7 +69,7 @@
         </div>
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a href="index.html" class="navbar-brand">
+                <a href="@Url.Action("index", "Home")" class="navbar-brand">
                     <img class="img01" src="~/Assets/images/Logo.png" />
                 </a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -64,23 +77,23 @@
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
-                        <a href="@Url.Action("index", "Home")" class="nav-item nav-link active">Home</a>
-                        <a href="@Url.Action("index", "Shop")" class="nav-item nav-link">Shop</a>
+                        <a href="@Url.Action("index", "Home")" class="nav-item nav-link active">Trang chủ</a>
+                        <a href="@Url.Action("index", "Shop")" class="nav-item nav-link">Sản phẩm</a>
                         <a href="@Url.Action("index", "ShopDetail")" class="nav-item nav-link">Shop Detail</a>
+
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a href="cart.html" class="dropdown-item">Cart</a>
-                                <a href="chackout.html" class="dropdown-item">Chackout</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="@Url.Action("index", "Cart")" class="dropdown-item">Giỏ hàng</a>
+                                <a href="@Url.Action("index", "Chackout")" class="dropdown-item">Thủ tục thanh toán</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="@Url.Action("Contact", "Home")" class="nav-item nav-link">Liên hệ</a>
+                        <a href="@Url.Action("index", "Cart")" class="nav-item nav-link">Giỏ hàng</a>
                     </div>
                     <div class="d-flex m-3 me-0">
                         <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                        <a href="#" class="position-relative me-4 my-auto">
+                        <a href="@Url.Action("index", "Cart")" class="position-relative me-4 my-auto">
                             <i class="fa fa-shopping-bag fa-2x"></i>
                             <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                         </a>
