--- a/MaxsportProject/Views/Shop/Index.cshtml
+++ b/MaxsportProject/Views/Shop/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿        <!-- Single Page Header start -->
 <div class="container-fluid page-header py-5">
-    <h1 class="text-center text-white display-6">Cửa Hàng</h1>
+    <h1 class="text-center text-white display-6">Sản phẩm</h1>
     <ol class="breadcrumb justify-content-center mb-0">
         <li class="breadcrumb-item"><a href="#">Trang Chủ</a></li>
         <li class="breadcrumb-item"><a href="#">Trang</a></li>
-        <li class="breadcrumb-item active text-white">Cửa Hàng</li>
+        <li class="breadcrumb-item active text-white">Sản phẩm</li>
     </ol>
 </div>
 <!-- Single Page Header End -->
 <!-- Fruits Shop Start-->
 <div class="container-fluid fruite py-5">
     <div class="container py-5">
-        <h1 class="mb-4">Cửa Hàng</h1>
+        <h1 class="mb-4">Sản Phẩm</h1>
         <div class="row g-4">
             <div class="col-lg-12">
                 <div class="row g-4">
