--- a/MaxsportProject/Views/Home/Index.cshtml
+++ b/MaxsportProject/Views/Home/Index.cshtml
@@ -9,10 +9,10 @@
         <div class="row g-5 align-items-center">
             <div class="col-md-12 col-lg-7">
                 <h4 class="mb-3 text-secondary">Luôn Luôn Uy Tín</h4>
-                <h1 class="mb-5 display-3 text-primary">Thời Trang & Sức Khoẻ</h1>
+                <h1 class="mb-5 display-3 text-danger">Thời Trang & Sức Khoẻ</h1>
                 <div class="position-relative mx-auto">
                     <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number" placeholder="Bạn Cần Điều Gì ?">
-                    <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">Tìm Ngay</button>
+                    <button type="submit" class="btn btn-danger border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">Tìm Ngay</button>
                 </div>
             </div>
             <div class="col-md-12 col-lg-5">
@@ -99,9 +99,9 @@
         <div class="tab-class text-center">
             <div class="row g-4">
                 <div class="col-lg-4 text-start">
-              
+
                     <img class="img02" src="~/Assets/images/rikilogo.jpg" />
-                       <h3>Áo Polo RIKI</h3>
+                    <h3>Áo Polo RIKI</h3>
                 </div>
                 <div class="col-lg-8 text-end">
                     <ul class="nav nav-pills d-inline-flex text-center mb-5">
