cau hinh lai web server

--- a/MaxsportProject/Views/Home/Index.cshtml
+++ b/MaxsportProject/Views/Home/Index.cshtml
@@ -2,6 +2,26 @@
     .img02 {
         max-height: 140px;
     }
+
+    .btn-danger {
+        color: #fff;
+        background-color: #45595b;
+        border-color: #45595b;
+    }
+
+    .p-4 {
+        padding: 2.5rem !important;
+    }
+    h3, .h3 {
+        font-size: 1.2rem;
+    }
+    .py-2 {
+        padding-top: 1.5rem !important;
+        padding-bottom: 1.5rem !important;
+    }
+    .bg-secondary {
+        background-color: #457bee8f !important;
+    }
 </style>
 <!-- Hero Start -->
 <div class="container-fluid py-5 mb-5 hero-header">
@@ -9,7 +29,7 @@
         <div class="row g-5 align-items-center">
             <div class="col-md-12 col-lg-7">
                 <h4 class="mb-3 text-secondary">Luôn Luôn Uy Tín</h4>
-                <h1 class="mb-5 display-3 text-danger">Thời Trang & Sức Khoẻ</h1>
+                <h1 class="mb-5 display-3 text-nomarl">Thời Trang & Sức Khoẻ</h1>
                 <div class="position-relative mx-auto">
                     <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number" placeholder="Bạn Cần Điều Gì ?">
                     <button type="submit" class="btn btn-danger border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">Tìm Ngay</button>
@@ -47,7 +67,7 @@
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
                 <div class="featurs-item text-center rounded bg-light p-4">
-                    <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
+                    <div class="featurs-icon btn-square rounded-circle bg-dark mb-5 mx-auto">
                         <i class="fas fa-car-side fa-3x text-white"></i>
                     </div>
                     <div class="featurs-content text-center">
@@ -58,7 +78,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="featurs-item text-center rounded bg-light p-4">
-                    <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
+                    <div class="featurs-icon btn-square rounded-circle bg-dark mb-5 mx-auto">
                         <i class="fas fa-user-shield fa-3x text-white"></i>
                     </div>
                     <div class="featurs-content text-center">
@@ -69,7 +89,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="featurs-item text-center rounded bg-light p-4">
-                    <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
+                    <div class="featurs-icon btn-square rounded-circle bg-dark mb-5 mx-auto">
                         <i class="fas fa-exchange-alt fa-3x text-white"></i>
                     </div>
                     <div class="featurs-content text-center">
@@ -80,7 +100,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="featurs-item text-center rounded bg-light p-4">
-                    <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
+                    <div class="featurs-icon btn-square rounded-circle bg-dark mb-5 mx-auto">
                         <i class="fa fa-phone-alt fa-3x text-white"></i>
                     </div>
                     <div class="featurs-content text-center">
@@ -458,10 +478,10 @@
             <div class="col-md-6 col-lg-4">
                 <a href="#">
                     <div class="service-item bg-secondary rounded border border-secondary">
-                        <img src="~/Assets/images/sp40-v.jpg" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/Assets/images/sp31-v.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="px-4 rounded-bottom">
                             <div class="service-content bg-primary text-center p-4 rounded">
-                                <h5 class="text-white">DXXX</h5>
+                                <h5 class="text-white">Fresh Apples</h5>
                                 <h3 class="mb-0">20% OFF</h3>
                             </div>
                         </div>
@@ -471,10 +491,10 @@
             <div class="col-md-6 col-lg-4">
                 <a href="#">
                     <div class="service-item bg-dark rounded border border-dark">
-                        <img src="~/Assets/images/sp41-v.jpg" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/Assets/images/sp32-v.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="px-4 rounded-bottom">
                             <div class="service-content bg-light text-center p-4 rounded">
-                                <h5 class="text-primary">XXX</h5>
+                                <h5 class="text-primary">Tasty Fruits</h5>
                                 <h3 class="mb-0">Free delivery</h3>
                             </div>
                         </div>
@@ -484,7 +504,7 @@
             <div class="col-md-6 col-lg-4">
                 <a href="#">
                     <div class="service-item bg-primary rounded border border-primary">
-                        <img src="~/Assets/images/sp42-v.jpg" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/Assets/images/sp33-v.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="px-4 rounded-bottom">
                             <div class="service-content bg-secondary text-center p-4 rounded">
                                 <h5 class="text-white">Exotic Vegitable</h5>
