--- a/MaxsportProject/Views/Shared/_Layout.cshtml
+++ b/MaxsportProject/Views/Shared/_Layout.cshtml
@@ -43,11 +43,17 @@
         }
 
         a {
-            color: #dc3545
+            color: #45595b; 
         }
 
         .text-primary {
-            color: #dc3545
+            color: #dc3545;
+        }
+        .btn-primary {
+            background-color: #45595b;
+        }
+        .fruite .tab-class .nav-item a.active {
+            background: #6c757d !important;
         }
     </style>
     <!-- Spinner Start -->
@@ -57,7 +63,7 @@
     <!-- Spinner End -->
     <!-- Navbar start -->
     <div class="container-fluid fixed-top">
-        <div class="container topbar bg-danger d-none d-lg-block">
+        <div class="container topbar bg-dark d-none d-lg-block">
             <div class="d-flex justify-content-between">
                 <div class="top-info ps-2">
                     <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">Hồ Chí Minh</a></small>
@@ -95,7 +101,7 @@
                         <a href="@Url.Action("index", "Cart")" class="nav-item nav-link">Giỏ hàng</a>
                     </div>
                     <div class="d-flex m-3 me-0">
-                        <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
+                        <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-"></i></button>
                         <a href="@Url.Action("index", "Cart")" class="position-relative me-4 my-auto">
                             <i class="fa fa-shopping-bag fa-2x"></i>
                             <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
